--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,8 @@ dev_dependencies:
     sdk: flutter
   
   http: ^0.12.0+4
+  carousel_pro: ^1.0.0
+  flutter_staggered_grid_view: "^0.3.0"
 
 
 # For information on the generic Dart part of this file, see the
